<resources>
    <string name="app_name">BikeRoutes</string>
    <string name="file_provider_path">pl.jakubokrasa.bikeroutes.fileprovider</string>
    <string name="nav_title_map">Map</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="nav_title_explore">Explore</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="location_service_notif_title">Location updates service</string>
    <string name="nav_title_my_routes">My Routes</string>
    <string name="nav_title_shared_routes">Explore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentdescription_route_menu_button">route menu button</string>
    <string name="signup_btn">Sign up</string>
    <string name="login_btn">Log in</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="back">BACK</string>
    <string name="get_password_link">get password link</string>
    <string name="title_account">Account</string>
    <string name="fragment_myroutes_no_data">It seems that you don\'t have any route at the moment.</string>
    <string name="fragment_sharedroutes_no_data">It seems that no route is shared. Check your Internet connection.</string>
    <string name="fragment_common_no_data_filter">No route meets your filters.</string>
    <string name="URL_NOMINATIM_GEOCODING_API">https://nominatim.openstreetmap.org/</string>
    <string name="filter_location_et_hint">e.g. "Ochota, Warszawa"</string>
    <string name="fragment_segments_toolbarbegin">Tap on the start</string>
    <string name="fragment_segments_toolbarend">Tap on the end</string>
    <string name="fragment_segments_toolbarready">Add the segment</string>
</resources>